# Communication

./: Communication.sln
A/: A.vcxproj  CMakeLists.txt  main.cpp
Arduino/: Arduino.vcxproj  Arduino.vcxproj.filters
Arduino_linux/: Arduino_linux.vcxproj  CMakeLists.txt  CMakeLists.txt.txt  main.cpp
Arduino_win/: main.cpp
Client/: Client.vcxproj  main.cpp
Communication/: CMakeLists.txt  Communication.vcxproj  main.cpp
LINUX/: CMakeLists.txt  LINUX.vcxproj  main.cpp
Server/: CMakeLists.txt  Server.vcxproj  main.cpp
WINDOW/: WINDOW.vcxproj  main.cpp
