cmake_minimum_required(VERSION 2.8)
project(Communication)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(Communication main.cpp)
target_link_libraries(Communication ${OpenCV_LIBS} ${wiringPi})
add_definitions(-std=c++0x -L/home/pi/wiringPi/wiringPi -lwiringPi)