cmake_minimum_required(VERSION 2.8)
project(Server)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${sys/socket.h_INCLUDE_DIRS})
add_executable(Server main.cpp)
target_link_libraries(Server ${OpenCV_LIBS})
target_link_libraries(Server ${sys.socket.h_LIBS})